초기 로그인 화면 구현

--- a/pr3/App.config
+++ b/pr3/App.config
@@ -3,6 +3,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="pr3.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=|DataDirectory|\db.sqlite;" providerName="System.Data.SQLite.EF6" />
@@ -25,4 +28,20 @@
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
+  <applicationSettings>
+    <pr3.Properties.Settings>
+      <setting name="loginUsername" serializeAs="String">
+        <value>wp2024</value>
+      </setting>
+      <setting name="loginPassword" serializeAs="String">
+        <value>wpwp</value>
+      </setting>
+      <setting name="usernameInputPlaceholder" serializeAs="String">
+        <value>아이디를 입력하세요.</value>
+      </setting>
+      <setting name="passwordInputPlaceholder" serializeAs="String">
+        <value>비밀번호를 입력하세요.</value>
+      </setting>
+    </pr3.Properties.Settings>
+  </applicationSettings>
 </configuration>
