--- a/pr3/Properties/Settings.settings
+++ b/pr3/Properties/Settings.settings
@@ -1,7 +1,18 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="pr3.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="loginUsername" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">wp2024</Value>
+    </Setting>
+    <Setting Name="loginPassword" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">wpwp</Value>
+    </Setting>
+    <Setting Name="usernameInputPlaceholder" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">아이디를 입력하세요.</Value>
+    </Setting>
+    <Setting Name="passwordInputPlaceholder" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">비밀번호를 입력하세요.</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
