파일 재구성, 학생 CRUD 구현
1. db 클래스들을 별도의 파일로 재구성.
2. 학생 CRUD 구현 (테스트 필요)

--- a/pr3/App.config
+++ b/pr3/App.config
@@ -31,10 +31,10 @@
   <applicationSettings>
     <pr3.Properties.Settings>
       <setting name="loginUsername" serializeAs="String">
-        <value>wp2024</value>
+        <value>qw</value>
       </setting>
       <setting name="loginPassword" serializeAs="String">
-        <value>wpwp</value>
+        <value>qw</value>
       </setting>
       <setting name="usernameInputPlaceholder" serializeAs="String">
         <value>아이디를 입력하세요.</value>
