강의 브랜치(961a2b)와 머지
솔루션에 직접 프로젝트 추가함.

--- a/pr3/pr3.csproj
+++ b/pr3/pr3.csproj
@@ -72,6 +72,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="lectureControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="lectureControl.Designer.cs">
+      <DependentUpon>lectureControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +100,9 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="lectureControl.resx">
+      <DependentUpon>lectureControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
