--- a/pr3/App.config
+++ b/pr3/App.config
@@ -6,6 +6,9 @@
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
       <section name="pr3.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="pr3.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=|DataDirectory|\db.sqlite;" providerName="System.Data.SQLite.EF6" />
@@ -30,12 +33,6 @@
   </system.data>
   <applicationSettings>
     <pr3.Properties.Settings>
-      <setting name="loginUsername" serializeAs="String">
-        <value>qw</value>
-      </setting>
-      <setting name="loginPassword" serializeAs="String">
-        <value>qw</value>
-      </setting>
       <setting name="usernameInputPlaceholder" serializeAs="String">
         <value>아이디를 입력하세요.</value>
       </setting>
@@ -44,4 +41,14 @@
       </setting>
     </pr3.Properties.Settings>
   </applicationSettings>
+  <userSettings>
+    <pr3.Properties.Settings>
+      <setting name="loginUsername" serializeAs="String">
+        <value>qw</value>
+      </setting>
+      <setting name="loginPassword" serializeAs="String">
+        <value>qw</value>
+      </setting>
+    </pr3.Properties.Settings>
+  </userSettings>
 </configuration>
