--- a/pr3/pr3.csproj
+++ b/pr3/pr3.csproj
@@ -125,6 +125,7 @@
       <DependentUpon>StudentControl.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\Lecture.datasource" />
     <None Include="Properties\DataSources\Student.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
