--- a/pr3/pr3.csproj
+++ b/pr3/pr3.csproj
@@ -89,18 +89,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="repository.cs" />
+    <Compile Include="Repository.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="lectureControl.cs">
+    <Compile Include="LectureControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="lectureControl.Designer.cs">
-      <DependentUpon>lectureControl.cs</DependentUpon>
+    <Compile Include="LectureControl.Designer.cs">
+      <DependentUpon>LectureControl.cs</DependentUpon>
     </Compile>
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
@@ -110,11 +110,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="scoreControl.cs">
+    <Compile Include="ScoreControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="scoreControl.Designer.cs">
-      <DependentUpon>scoreControl.cs</DependentUpon>
+    <Compile Include="ScoreControl.Designer.cs">
+      <DependentUpon>ScoreControl.cs</DependentUpon>
     </Compile>
     <Compile Include="StudentControl.cs">
       <SubType>UserControl</SubType>
@@ -137,8 +137,8 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="lectureControl.resx">
-      <DependentUpon>lectureControl.cs</DependentUpon>
+    <EmbeddedResource Include="LectureControl.resx">
+      <DependentUpon>LectureControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
@@ -150,8 +150,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="scoreControl.resx">
-      <DependentUpon>scoreControl.cs</DependentUpon>
+    <EmbeddedResource Include="ScoreControl.resx">
+      <DependentUpon>ScoreControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Statistics.resx">
       <DependentUpon>Statistics.cs</DependentUpon>
