수정! 점수 페이지
1. 등록학기와 해당 학기의 신청강좌 리스트업 기능 기초 구현

--- a/pr3/pr3.csproj
+++ b/pr3/pr3.csproj
@@ -160,6 +160,7 @@
       <DependentUpon>StudentControl.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\Enrollment.datasource" />
     <None Include="Properties\DataSources\Lecture.datasource" />
     <None Include="Properties\DataSources\Student.datasource" />
     <None Include="Properties\Settings.settings">
