--- a/pr3/pr3.csproj
+++ b/pr3/pr3.csproj
@@ -139,6 +139,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LectureControl.resx">
       <DependentUpon>LectureControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
