백업문제 해결
1. 배포버전, 디버깅버전 해결

--- a/pr3/Properties/Settings.settings
+++ b/pr3/Properties/Settings.settings
@@ -9,10 +9,10 @@
       <Value Profile="(Default)">비밀번호를 입력하세요.</Value>
     </Setting>
     <Setting Name="loginUsername" Type="System.String" Scope="User">
-      <Value Profile="(Default)">qw</Value>
+      <Value Profile="(Default)">wk</Value>
     </Setting>
     <Setting Name="loginPassword" Type="System.String" Scope="User">
-      <Value Profile="(Default)">qw</Value>
+      <Value Profile="(Default)">wk</Value>
     </Setting>
   </Settings>
 </SettingsFile>
