--- a/pr3/App.config
+++ b/pr3/App.config
@@ -11,7 +11,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=|DataDirectory|\db.sqlite;" providerName="System.Data.SQLite.EF6" />
+    <add name="DefaultConnection" connectionString="Data Source=|DataDirectory|\db.sqlite;Pooling=False;" providerName="System.Data.SQLite.EF6" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -44,10 +44,10 @@
   <userSettings>
     <pr3.Properties.Settings>
       <setting name="loginUsername" serializeAs="String">
-        <value>qw</value>
+        <value>wk</value>
       </setting>
       <setting name="loginPassword" serializeAs="String">
-        <value>qw</value>
+        <value>wk</value>
       </setting>
     </pr3.Properties.Settings>
   </userSettings>
